# gdal_sxf_plugin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/: ogr_mem.h  ogr_sxf.h  ogrmemlayer.cpp  ogrsxfdatasource.cpp  ogrsxfdriver.cpp  ogrsxflayer.cpp  rscfile.cpp
